[project]
name = "dependabot-poetry-test"
version = "0.1.0"
description = ""
authors = [
    {name = "ESKYoung",email = "ESKYoung@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygments (<2.21.0)"
]

[tool.poetry]
requires-poetry = "==2.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
